# lsm6dsv16x-rs

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
bsp/: Cargo.toml  README.md  build.rs
bsp/.cargo/: config.toml
bsp/src/: main.rs
examples/compressed_fifo_stm32f401re/: Cargo.toml  README.md
examples/compressed_fifo_stm32f401re_embassy/: Cargo.toml  README.md
examples/fifo_irq_stm32f401re/: Cargo.toml  README.md
examples/fifo_irq_stm32f401re_embassy/: Cargo.toml  README.md
examples/fifo_stepcnt_stm32f401re/: Cargo.toml  README.md
examples/fifo_stepcnt_stm32f401re_embassy/: Cargo.toml  README.md
examples/fifo_stm32f401re/: Cargo.toml  README.md
examples/fifo_stm32f401re_embassy/: Cargo.toml  README.md
examples/free_fall_stm32f401re/: Cargo.toml  README.md
examples/free_fall_stm32f401re_embassy/: Cargo.toml  README.md
examples/fsm_fourd_stm32f401re/: Cargo.toml  README.md  build.rs
examples/fsm_fourd_stm32f401re_embassy/: Cargo.toml  README.md  build.rs
examples/fsm_glance_stm32f401re/: Cargo.toml  README.md  build.rs
examples/fsm_glance_stm32f401re_embassy/: Cargo.toml  README.md  build.rs
examples/mlc_gym_stm32f401re/: Cargo.toml  README.md  build.rs
examples/mlc_gym_stm32f401re_embassy/: Cargo.toml  README.md  build.rs
examples/pedometer_stm32f401re/: Cargo.toml  README.md
examples/pedometer_stm32f401re_embassy/: Cargo.toml  README.md
examples/qvar_read_data_polling_stm32f401re/: Cargo.toml  README.md
examples/qvar_read_data_polling_stm32f401re_embassy/: Cargo.toml  README.md
examples/read_data_irq_stm32f401re/: Cargo.toml  README.md
examples/read_data_irq_stm32f401re_embassy/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re_embassy/: Cargo.toml  README.md
examples/self_test_stm32f401re/: Cargo.toml
examples/self_test_stm32f401re_embassy/: Cargo.toml  README.md
examples/sensor_fusion_stm32f401re/: Cargo.toml  README.md
examples/sensor_fusion_stm32f401re_embassy/: Cargo.toml  README.md
examples/sensor_hub_stm32f401re/: Cargo.toml  README.md
examples/sensor_hub_stm32f401re_embassy/: Cargo.toml  README.md
examples/sig_mot_stm32f401re/: Cargo.toml  README.md
examples/sig_mot_stm32f401re_embassy/: Cargo.toml  README.md
examples/single_double_tap_stm32f401re/: Cargo.toml  README.md
src/: driver.rs  lib.rs  prelude.rs
(+88 files in other folders)
